--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
 <h2><%= @cocktail.name %></h2>
+<%= cl_image_tag(@cocktail.image.key, width: 400, height: 300, crop: :fill) %>
 <% @cocktail.doses.each do |dose| %>
   <li>
   <%= dose.description %>
